<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_endpoint_label" />

    <EditText
        android:id="@+id/edit_text_endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_endpoint_hint"
        android:inputType="text"
        android:autofillHints="name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/client_private_key_label" />

    <EditText
        android:id="@+id/edit_text_client_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_private_key_hint"
        android:inputType="text"
        android:autofillHints="password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/server_public_key_label" />

    <EditText
        android:id="@+id/edit_text_server_public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_public_key_hint"
        android:inputType="text"
        android:autofillHints="password" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/save_button_text" />

</LinearLayout>
